--- a/playbook.yml
+++ b/playbook.yml
@@ -1,35 +1,61 @@
 ---
-- name: install Docker
-  hosts: all
+- hosts: all
   become: true
+  vars:
+    container_count: 1
+    default_container_name: docker
+    default_container_image: ubuntu
+    default_container_command: sleep 1d
+
   tasks:
-    - name: Install apt-transport-https
-      ansible.builtin.apt:
-        name:
+    - name: Install aptitude
+      apt:
+        name: aptitude
+        state: latest
+        update_cache: true
+
+    - name: Install required system packages
+      apt:
+        pkg:
           - apt-transport-https
           - ca-certificates
-          - lsb-release
-          - gnupg
+          - curl
+          - software-properties-common
+          - python3-pip
+          - virtualenv
+          - python3-setuptools
         state: latest
         update_cache: true
 
-    - name: Add signing key
-      ansible.builtin.apt_key:
-        url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+    - name: Add Docker GPG apt Key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
         state: present
 
-    - name: Add repository into sources list
-      ansible.builtin.apt_repository:
-        repo: "deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable"
+    - name: Add Docker Repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu focal stable
         state: present
-        filename: docker
 
-    - name: Install Docker
-      ansible.builtin.apt:
-        name:
-          - docker
-          - docker.io
-          - docker-compose
-          - docker-registry
+    - name: Update apt and install docker-ce
+      apt:
+        name: docker-ce
         state: latest
         update_cache: true
+
+    - name: Install Docker Module for Python
+      pip:
+        name: docker
+
+    - name: Pull default Docker image
+      community.docker.docker_image:
+        name: "{{ default_container_image }}"
+        source: pull
+
+    - name: Create default containers
+      community.docker.docker_container:
+        name: "{{ default_container_name }}{{ item }}"
+        image: "{{ default_container_image }}"
+        command: "{{ default_container_command }}"
+        state: present
+      with_sequence: count={{ container_count }}
